syntax = "proto3";

package auth;

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

// Register
message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string token  = 1;
    repeated string error = 2;
}

// SignIn
message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    string token  = 1;
    repeated string error = 2;
}

// Validate
message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    string account_id = 1;
    repeated string error = 2;
}
